# recorder

./: CMakeLists.txt  main.cpp  mydialog.cpp  mydialog.h  style.qss  test.c  windowlist.cpp  windowlist.h
